2006-02-03  Florian Boor  <florian.boor@kernelconcepts.de>

    * categories.c (is_in_category), editing.c (update_categories_list):
    Use uppercase tag to avoid compatibility issues. Fixes bug #1453.

2006-02-02  Phil Blundell  <pb@reciva.com>

	* main.c (main): Put focus in main window, not search entry field.
	(on_main_focus): Don't grab focus into search entry, just leave it
	in the window.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* structure.c (load_structure): Use GLib functions rather than
	manual string hackery.

2006-01-24  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c (store_name_fields): Fix segfault parsing names separated by comma.

2006-01-10  Florian Boor  <florian.boor@kernelconcepts.de>

    * pimc-ui.c (build_pim_categories_list): Reset useless Hildon GTK 
      modification.

2006-01-01  Florian Boor  <florian.boor@kernelconcepts.de>

    * configure.ac: Release Version 0.43.
    * familiar/control1: Update dependencies: add libgpecontacts.
    
2005-12-31  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Change packing of GtkTextViews to fix size problem in hildon env.
    * main-hildon.c: Modify likewise, new import_vcard() parameters, comments.

2005-12-29  Florian Boor  <florian.boor@kernelconcepts.de>

    * import-vcard.* main.c: Apply patch by Olivier Berger to make import of 
                             multiple vcards in one file possible.

2005-12-21  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Apply patch by Olivier Berger to fix segfault opening
                 name detail dialog.

2005-12-16  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Apply patch to clean up name order logic and make it more 
                 friendly to use. Soem general code cleanups and improved 
                 comments. Contributed by Olivier Berger.
                 
2005-12-13  Florian Boor  <florian.boor@kernelconcepts.de>
