@@ -840,7 +840,8 @@ do_search (GObject *obj, GtkWidget *entry)
       GtkTreeIter titer;
       
       gtk_list_store_append (list_store, &titer);
-      gtk_list_store_set (list_store, &titer, 0, p->name, 1, p->id, -1);
+      gtk_list_store_set (list_store, &titer, 0, 
+                          (p->name[0] != '(') ? p->name : p->company, 1, p->id, -1);
       contacts_discard_person (p);
     }
   
@@ -895,7 +896,8 @@ do_find (void)
       if (match_for_search (p, NULL, c))
         {
 	      gtk_list_store_append (list_store, &titer);
-	      gtk_list_store_set (list_store, &titer, 0, p->name, 1, p->id, -1);
+          gtk_list_store_set (list_store, &titer, 0, 
+                              (p->name[0] != '(') ? p->name : p->company, 1, p->id, -1);
         }
 
       contacts_discard_person (p);
